--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "@vue/cli-plugin-router": "~4.2.0",
     "@vue/cli-plugin-vuex": "~4.2.0",
     "@vue/cli-service": "~4.2.0",
+    "css-loader": "^3.4.2",
+    "style-loader": "^1.1.3",
+    "stylus-loader": "^3.0.2",
     "vue-template-compiler": "^2.6.11"
   },
   "browserslist": [
