--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "core-js": "^3.6.4",
+    "jwt-decode": "^2.2.0",
     "lib-flexible": "^0.3.2",
     "postcss-px2rem": "^0.3.0",
     "vant": "^2.5.3",
