--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "jwt-decode": "^2.2.0",
     "lib-flexible": "^0.3.2",
     "postcss-px2rem": "^0.3.0",
+    "sweetalert": "^2.1.2",
     "vant": "^2.5.3",
     "vue": "^2.6.11",
     "vue-router": "^3.1.5",
