--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "jwt-decode": "^2.2.0",
     "lib-flexible": "^0.3.2",
     "postcss-px2rem": "^0.3.0",
+    "qs": "^6.9.1",
     "sweetalert": "^2.1.2",
     "vant": "^2.5.3",
     "vue": "^2.6.11",
+    "vue-axios": "^2.1.5",
     "vue-router": "^3.1.5",
     "vuex": "^3.1.2"
   },
