--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "core-js": "^3.6.4",
     "jwt-decode": "^2.2.0",
     "lib-flexible": "^0.3.2",
-    "postcss-px2rem": "^0.3.0",
+    "postcss-px2rem-exclude": "0.0.6",
     "qs": "^6.9.1",
     "sweetalert": "^2.1.2",
     "vant": "^2.5.3",
