--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vant": "^2.5.3",
     "vue": "^2.6.11",
     "vue-axios": "^2.1.5",
+    "vue-jsonp": "^0.1.8",
     "vue-router": "^3.1.5",
     "vuex": "^3.1.2"
   },
